# xmirror

./: CMakeLists.txt  Client.h  LoadPng.cpp  LoadPng.h  Log.cpp  Log.h  OpenGlWrap.cpp  OpenGlWrap.h  OpenHmdWrap.cpp  OpenHmdWrap.h  README.md  RenderingEngine.cpp  RenderingEngine.h  TypesConf.h  WebCamClient.h  XServerMirror.cpp  XServerMirror.h  Xinput.h  geometry.h  main.cpp  spy.sh  xorg.conf
miniZelements/ZelementsPool/: IZelement.hh  Pad.hh  ZClock.hh  ZTypes.hh
miniZelements/ZelementsPool/CameraInput/: CameraInput.cc  CameraInput.hh
miniZelements/ZelementsPool/CameraInput/hal/: CameraInputv4l.cc  CameraInputv4l.hh
miniZelements/ZelementsPool/GenericWrapper/: GenericWrapper.hh
miniZelements/ZiDSStub/: Evt.cc
miniZelements/ZiDSStub/zinc/: debug.hh  evt.hh  zos.hh
